force-app/main/default/objects/Regional_Analytics__c/fields/Combined_YY_Revenue_Dom__c.field-meta.xml
<CustomField>
    <fullName>Combined_YY_Revenue_Dom__c</fullName>
    <formula>Total_Revenue_Dom__c - QF_Revenue_Dom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined YY Revenue Dom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>