force-app/main/default/objects/Regional_Analytics__c/fields/Combined_YY_Share_Dom__c.field-meta.xml
<CustomField>
    <fullName>Combined_YY_Share_Dom__c</fullName>
    <formula>IF( Total_Revenue_Dom__c!= 0, Combined_YY_Revenue_Dom__c  / Total_Revenue_Dom__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Combined YY Share Dom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>