force-app/main/default/objects/Regional_Analytics__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fiscal Year</label>
    <length>7</length>
    <type>Text</type>
</CustomField>