force-app/main/default/objects/Regional_Analytics__c/fields/QF_Pax_Dom__c.field-meta.xml
<CustomField>
    <fullName>QF_Pax_Dom__c</fullName>
    <label>QF Pax Dom</label>
    <summarizedField>Regional_Routes__c.QF_Flights__c</summarizedField>
    <summaryFilterItems>
        <field>Regional_Routes__c.Network__c</field>
        <operation>equals</operation>
        <value>Domestic</value>
    </summaryFilterItems>
    <summaryForeignKey>Regional_Routes__c.Region_Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>