force-app/main/default/objects/Regional_Analytics__c/fields/QF_RPK_Share_Dom__c.field-meta.xml
<CustomField>
    <fullName>QF_RPK_Share_Dom__c</fullName>
    <formula>IF(  Total_RPK_Dom__c !=0, QF_RPK_Dom__c /Total_RPK_Dom__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF RPK Share Dom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>