force-app/main/default/objects/Regional_Analytics__c/fields/QF_Yield_Intl__c.field-meta.xml
<CustomField>
    <fullName>QF_Yield_Intl__c</fullName>
    <formula>IF(   QF_RPK_Intl__c   != 0,(   QF_Revenue_Intl__c / QF_RPK_Intl__c   ),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Yield Intl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>