force-app/main/default/objects/Regional_Analytics__c/fields/QF_Yield_Premium_Dom__c.field-meta.xml
<CustomField>
    <fullName>QF_Yield_Premium_Dom__c</fullName>
    <formula>IF(  YY_Yield_Dom__c != 0,  QF_Yield_Dom__c / YY_Yield_Dom__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Yield Premium Dom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>