force-app/main/default/objects/Regional_Analytics__c/fields/Qtr__c.field-meta.xml
<CustomField>
    <fullName>Qtr__c</fullName>
    <label>Qtr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qtr-1</fullName>
            </value>
            <value>
                <fullName>Qtr-2</fullName>
            </value>
            <value>
                <fullName>Qtr-3</fullName>
            </value>
            <value>
                <fullName>Qtr-4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>