force-app/main/default/objects/Regional_Analytics__c/fields/Total_Air_Spend_Intl__c.field-meta.xml
<CustomField>
    <fullName>Total_Air_Spend_Intl__c</fullName>
    <label>Total Air Spend Intl</label>
    <summarizedField>Regional_Routes__c.Total_Air_Travel_Spend__c</summarizedField>
    <summaryFilterItems>
        <field>Regional_Routes__c.Network__c</field>
        <operation>equals</operation>
        <value>International</value>
    </summaryFilterItems>
    <summaryForeignKey>Regional_Routes__c.Region_Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>