force-app/main/default/objects/Regional_Analytics__c/fields/Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Year_Month__c</fullName>
    <formula>Year__c &amp; &quot;-&quot;&amp;Case(FY_Month__c,&quot;1&quot;,&quot;01&quot;,&quot;2&quot;,&quot;02&quot;,&quot;3&quot;,&quot;03&quot;,&quot;4&quot;,&quot;04&quot;,&quot;5&quot;,&quot;05&quot;,&quot;6&quot;,&quot;06&quot;,&quot;7&quot;,&quot;07&quot;,&quot;8&quot;,&quot;08&quot;,&quot;9&quot;,&quot;09&quot;,&quot;10&quot;,&quot;10&quot;,&quot;11&quot;,&quot;11&quot;,&quot;12&quot;,&quot;12&quot;,&quot;NULL&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year-Month</label>
    <type>Text</type>
</CustomField>