force-app/main/default/objects/Regional_Analytics__c/fields/YY_Pax_Intl__c.field-meta.xml
<CustomField>
    <fullName>YY_Pax_Intl__c</fullName>
    <label>YY Pax Intl</label>
    <summarizedField>Regional_Routes__c.YY_Flights__c</summarizedField>
    <summaryFilterItems>
        <field>Regional_Routes__c.Network__c</field>
        <operation>equals</operation>
        <value>International</value>
    </summaryFilterItems>
    <summaryForeignKey>Regional_Routes__c.Region_Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>