force-app/main/default/objects/Regional_Analytics__c/fields/YY_Revenue_Combined__c.field-meta.xml
<CustomField>
    <fullName>YY_Revenue_Combined__c</fullName>
    <label>YY Revenue Combined</label>
    <summarizedField>Regional_Routes__c.YY_Revenue_Combined__c</summarizedField>
    <summaryForeignKey>Regional_Routes__c.Region_Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>