force-app/main/default/objects/Regional_Analytics__c/fields/YY_Revenue_Dom__c.field-meta.xml
<CustomField>
    <fullName>YY_Revenue_Dom__c</fullName>
    <label>YY Revenue Dom</label>
    <summarizedField>Regional_Routes__c.YY_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Regional_Routes__c.Network__c</field>
        <operation>equals</operation>
        <value>Domestic</value>
    </summaryFilterItems>
    <summaryForeignKey>Regional_Routes__c.Region_Month__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>