force-app/main/default/objects/Regional_Analytics__c/fields/YY_Share__c.field-meta.xml
<CustomField>
    <fullName>YY_Share__c</fullName>
    <formula>IF(  Total_Air_Spend__c !=0, YY_Revenue__c /Total_Air_Spend__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YY Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>