force-app/main/default/objects/Regional_Analytics__c/fields/YY_Share_Intl__c.field-meta.xml
<CustomField>
    <fullName>YY_Share_Intl__c</fullName>
    <formula>IF(  Total_Air_Spend_Intl__c !=0, YY_Revenue_Intl__c /Total_Air_Spend_Intl__c ,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YY Share Intl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>