force-app/main/default/objects/Regional_Analytics__c/fields/YY_Yield_Dom__c.field-meta.xml
<CustomField>
    <fullName>YY_Yield_Dom__c</fullName>
    <formula>IF(  YY_RPK_Dom__c != 0,(  YY_Revenue_Dom__c / YY_RPK_Dom__c ),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YY Yield Dom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>