force-app/main/default/objects/Regional_Analytics__c/fields/YY_Yield_intl__c.field-meta.xml
<CustomField>
    <fullName>YY_Yield_intl__c</fullName>
    <formula>IF(   YY_RPK_Intl__c  != 0,(   YY_Revenue_Intl__c / YY_RPK_Intl__c  ),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YY Yield Intl</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>