force-app/main/default/objects/Regional_Analytics__c/recordTypes/FY2015_16.recordType-meta.xml
<RecordType>
    <fullName>FY2015_16</fullName>
    <active>true</active>
    <description>FY 2015-16</description>
    <label>FY2015-16</label>
</RecordType>