force-app/main/default/objects/Regional_Analytics__c/recordTypes/FY2016_17.recordType-meta.xml
<RecordType>
    <fullName>FY2016_17</fullName>
    <active>true</active>
    <description>FY 2016-17</description>
    <label>FY2016-17</label>
</RecordType>