force-app/main/default/objects/Regional_Analytics__c/recordTypes/FY2017_18.recordType-meta.xml
<RecordType>
    <fullName>FY2017_18</fullName>
    <active>true</active>
    <description>FY 2017-18</description>
    <label>FY2017-18</label>
</RecordType>