force-app/main/default/objects/Regional_Analytics__c/recordTypes/FY2018_19.recordType-meta.xml
<RecordType>
    <fullName>FY2018_19</fullName>
    <active>true</active>
    <description>FY 2018-19</description>
    <label>FY2018-19</label>
</RecordType>